--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.username=root
+spring.datasource.password=1234qwer
+spring.datasource.url= jdbc:mysql://localhost:3306/school_ms
 
+spring.jpa.hibernate.ddl-auto=create-drop
