--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.username=root
-spring.datasource.password=1234qwer
-spring.datasource.url= jdbc:mysql://localhost:3306/school_ms
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.url= jdbc:h2:mem:sms
+
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
